--- a/package.json
+++ b/package.json
@@ -8,11 +8,20 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
+    "bootstrap": "^3.3.7",
     "bootstrap-sass": "^3.3.7",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "ladda": "^1.0.0",
     "laravel-mix": "^0.8.1",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10"
+    "material-design-icons-iconfont": "^3.0.3",
+    "material-icons": "^0.1.0",
+    "materialize-css": "^0.100.1",
+    "simple-line-icons": "^2.4.1",
+    "typeface-open-sans": "^0.0.31",
+    "vue": "^2.1.10",
+    "vue-materials": "^1.0.7-rc.7"
   },
   "dependencies": {
     "vue-router": "^2.2.1",
