--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.1.1",
     "ladda": "^1.0.0",
     "laravel-mix": "^0.8.1",
+    "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
