added function to add an employee to the table

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/assets/js/app.js": "/assets/js/app.js?id=07590f79c3ae79ddcfa2",
-    "/assets/css/app.css": "/assets/css/app.css?id=c7498c60410f1f9f5796",
-    "/assets/css/vendor.css": "/assets/css/vendor.css?id=be0817d6fbe7bbdbfc42",
+    "/assets/js/app.js": "/assets/js/app.js?id=5e5799c25868108fd624",
+    "/assets/css/vendor.css": "/assets/css/vendor.css?id=bb4206626431e29007c3",
     "/assets/css/login.css": "/assets/css/login.css?id=e22173c39f43d319059d",
-    "/assets/css/error.css": "/assets/css/error.css?id=d41d8cd98f00b204e980"
+    "/assets/css/error.css": "/assets/css/error.css?id=d41d8cd98f00b204e980",
+    "/assets/css/app.css": "/assets/css/app.css?id=5f005990f3dbab2d25c5"
 }
