--- a/package.json
+++ b/package.json
@@ -12,30 +12,33 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "jquery": "^3.1.1",
-    "laravel-mix": "^1.0",
-    "lodash": "^4.17.4",
-    "vue": "^2.1.10",
+    "cross-env": "^5.0.5",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
     "ladda": "^1.0.0",
+    "laravel-mix": "^1.0",
     "localforage": "^1.5.0",
+    "lodash": "^4.17.4",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
     "materialize-css": "^0.100.1",
     "simple-line-icons": "^2.4.1",
     "typeface-open-sans": "^0.0.31",
+    "vue": "^2.1.10",
     "vue-materials": "^1.0.7-rc.7"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
-    "bootstrap-vue": "^0.18.0",
+    "bootstrap-vue": "^1.0.0-beta.9",
+    "csshake": "^1.5.2",
     "npm-font-open-sans": "^1.1.0",
-    "vee-validate": "^2.0.0-rc.17",
+    "portal-vue": "^1.1.1",
+    "sweetalert2": "^6.9.1",
+    "vee-validate": "^2.0.0-rc.18",
     "vue-router": "^2.7.0",
     "vue-select": "^2.2.0",
     "vuejs-datepicker": "^0.7.16",
     "vuelidate": "^0.5.0",
-    "vuex": "^2.4.0"
+    "vuex": "^2.4.1"
   }
 }
