--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
+        "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
-        "tom-lingham/searchy": "^2.0"
+        "teamtnt/laravel-scout-tntsearch-driver": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
