--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.5",
+    "cross-env": "^5.1.3",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.1.1",
+    "jquery": "^3.3.1",
     "ladda": "^1.0.0",
-    "laravel-mix": "^1.0",
-    "localforage": "^1.5.0",
+    "laravel-mix": "^1.7.2",
+    "localforage": "^1.5.6",
     "lodash": "^4.17.4",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
@@ -28,17 +28,17 @@
     "vue-materials": "^1.0.7-rc.7"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "^4.0.0",
     "bootstrap-vue": "^1.4.1",
-    "csshake": "^1.5.2",
+    "csshake": "^1.5.3",
     "npm-font-open-sans": "^1.1.0",
-    "portal-vue": "^1.1.1",
-    "sweetalert2": "^6.9.1",
-    "vee-validate": "^2.0.0-rc.18",
-    "vue-router": "^2.7.0",
+    "portal-vue": "^1.3.0",
+    "sweetalert2": "^6.11.5",
+    "vee-validate": "^2.0.3",
+    "vue-router": "^2.8.1",
     "vue-select": "^2.4.0",
     "vuejs-datepicker": "^0.7.16",
     "vuelidate": "^0.5.0",
-    "vuex": "^2.4.1"
+    "vuex": "^2.5.0"
   }
 }
