--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "vue-router": "^2.8.1",
     "vue-select": "^2.4.0",
     "vue-xeditable": "^1.1.0",
-    "vuejs-datepicker": "^0.7.16",
+    "vuejs-datepicker": "^0.9.26",
     "vuelidate": "^0.5.0",
-    "vuex": "^2.5.0"
+    "vuex": "^2.5.0",
+    "vuex-persistedstate": "^2.4.2"
   }
 }
