added cors and temporarily enabled api on public

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1.3",
+    "eslint": "^4.18.1",
+    "eslint-plugin-vue": "^4.2.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "ladda": "^1.0.0",
@@ -22,8 +24,11 @@
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
     "materialize-css": "^0.100.1",
+    "prettier": "1.10.2",
     "simple-line-icons": "^2.4.1",
+    "ts-loader": "^3.5.0",
     "typeface-open-sans": "^0.0.31",
+    "typescript": "^2.7.2",
     "vue": "^2.5.13",
     "vue-materials": "^1.0.7-rc.7"
   },
