--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "devDependencies": {
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.1.3",
-    "eslint": "^4.18.1",
-    "eslint-plugin-vue": "^4.2.2",
+    "cross-env": "^5.1.5",
+    "eslint": "^4.19.1",
+    "eslint-plugin-vue": "^4.5.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "ladda": "^1.0.0",
+    "ladda": "^1.0.6",
     "laravel-mix": "^1.7.2",
-    "localforage": "^1.5.6",
-    "lodash": "^4.17.4",
+    "localforage": "^1.7.1",
+    "lodash": "^4.17.10",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
     "materialize-css": "^0.100.1",
@@ -28,28 +28,30 @@
     "simple-line-icons": "^2.4.1",
     "ts-loader": "^3.5.0",
     "typeface-open-sans": "^0.0.31",
-    "typescript": "^2.7.2",
-    "vue": "^2.5.13",
+    "typescript": "^2.8.3",
+    "vue": "^2.5.16",
     "vue-materials": "^1.0.7-rc.7"
   },
   "dependencies": {
-    "@onekiloparsec/vue-xeditable": "^0.3.11",
-    "bootstrap": "^4.0.0",
-    "bootstrap-vue": "^1.4.1",
+    "@onekiloparsec/vue-xeditable": "^0.3.14",
+    "bootstrap": "^4.1.1",
+    "bootstrap-vue": "^1.5.1",
     "csshake": "^1.5.3",
     "npm-font-open-sans": "^1.1.0",
     "portal-vue": "^1.3.0",
     "sweetalert2": "^6.11.5",
     "typeface-poppins": "0.0.53",
     "typeface-roboto": "0.0.50",
-    "vee-validate": "^2.0.3",
+    "vee-validate": "^2.0.9",
     "vue-click-outside": "^1.0.7",
-    "vue-router": "^2.8.1",
+    "vue-loader": "^14.2.2",
+    "vue-router": "^3.0.1",
     "vue-select": "^2.4.0",
+    "vue-template-compiler": "^2.5.16",
     "vue-xeditable": "^1.1.0",
-    "vuejs-datepicker": "^0.9.26",
+    "vuejs-datepicker": "^0.9.29",
     "vuelidate": "^0.5.0",
     "vuex": "^2.5.0",
-    "vuex-persistedstate": "^2.4.2"
+    "vuex-persistedstate": "^2.5.4"
   }
 }
